afc: Explicitly toUpper device ID when inserting

AfcUrl upper-cases the device id but we didn't explicitly
do this when inserting/removing the device, so when a device
has a lower-case ID, it will fail to find it.

BUG: 487874


(cherry picked from commit b58bbf65264329ed0b6fd76f747b22d7731ec14f)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>